fable/test/valid/save_3.f
      program prog
      common /com/ num
      save /com/
      end
