fable/test/semantic_error/intrinsic_common.f
      program prog
      common /com/ abs
      intrinsic abs
      end
